--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="container">
             <div class="title-container">
                 <h1 class="title">ToDo List </h1>
-                <img class="title-img" src="/logo.png">
+                <img class="title-img" src="./logo.png">
             </div>
             <div class="input-container">
                 <input type="text" class="text-input" placeholder="Enter Your Text" required>
